[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rode"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.1.3",
]

[project.optional-dependencies]
plate = [
    "plotly>=6.1.2",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rode._rode"

[tool.uv]
# Rebuild package when any Rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }
