[package]
name = "rode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rode"
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = "0.23.0"
pyo3 = {version = "0.23.3", features=["abi3-py310"]}

[dev-dependencies]
rstest = "0.24.0"
